--- a/index.html
+++ b/index.html
@@ -1,35 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>WEBDEV CREATION</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-</head>
-<body>
- <header>
 
-    <!-- Why we use class as names yo nih sodhxu -->
-     <div class="main">
-                
+    <!-- <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Exo&display=swap" rel="stylesheet">  -->
+    <link rel="stylesheet" type="text/css" href="./css/style.css" />
+  </head>
+  <body>
+    <header>
+      <!-- Navigation Bar -->
+      <nav class="main">
         <ul>
-              <li class="active"><a href="#" >Home</a></li>
-              <li><a href="#">Services</a></li>
-              <li><a href="#">Gallery</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Contact</a></li>
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Gallery</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
-     </div>
-     <div class="title">
-         <h1>WEBDEV CREATION</h1>
-     </div>
+      </nav>
+      <div class="title">
+        <h1>WEBDEV CREATION</h1>
+      </div>
 
-     <div class="button">
+      <div class="button">
         <a href="#" class="btn">WATCH VIDEO</a>
         <a href="#" class="btn">LEARN MORE</a>
-    </div>
-  </header>
-    
-</body>
+      </div>
+    </header>
+  </body>
 </html>
